// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatherTextarea.vue should allow custom blur events 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container raised feather-textarea-content"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-textarea"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <!--v-if-->
        <!--v-if-->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <div
      class="feather-input-spacer"
    >
       
    </div>
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
</div>
`;

exports[`FeatherTextarea.vue should allow custom focus events 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container raised focused feather-textarea-content focused"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-textarea"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <!--v-if-->
        <!--v-if-->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <div
      class="feather-input-spacer"
    >
       
    </div>
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
</div>
`;

exports[`FeatherTextarea.vue should clear textarea when clear-icon is clicked 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container feather-textarea-content"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-textarea"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <!--v-if-->
        <!--v-if-->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <div
      class="feather-input-spacer"
    >
       
    </div>
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
</div>
`;

exports[`FeatherTextarea.vue should not render a clear icon when the textarea doesn't have a value 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container feather-textarea-content"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-textarea"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <!--v-if-->
        <!--v-if-->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <div
      class="feather-input-spacer"
    >
       
    </div>
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
</div>
`;

exports[`FeatherTextarea.vue should render a clear icon when clear has a value and textarea also has a value 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container raised feather-textarea-content"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-textarea"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <a
          class="action-icon hide-when-disabled"
          data-ref-id="feather-form-element-clear"
          href="#"
          title="clear"
        >
          <svg
            aria-hidden="true"
            class="feather-icon"
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,17.55,13.43,12,19,6.4A1,1,0,1,0,17.58,5L12,10.58,6.42,5A1,1,0,0,0,5,6.42L10.6,12,5,17.6A1,1,0,0,0,5,19a1,1,0,0,0,.71.29,1,1,0,0,0,.71-.3L12,13.41,17.6,19a1,1,0,0,0,.71.29A1,1,0,0,0,19,19,1,1,0,0,0,19,17.55Z"
            />
          </svg>
        </a>
        <!--v-if-->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <div
      class="feather-input-spacer"
    >
       
    </div>
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
</div>
`;

exports[`FeatherTextarea.vue should render a maxlength attribute and character count when maxlength specified 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container raised feather-textarea-content"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-textarea"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        maxlength="5"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <!--v-if-->
        <!--v-if-->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <div
      class="feather-input-spacer"
    >
       
    </div>
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="feather-textarea-count"
      data-ref-id="feather-form-element-count"
    >
      4 / 5
    </div>
    
  </div>
</div>
`;

exports[`FeatherTextarea.vue should render an textarea error 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container error feather-textarea-content error"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="true"
        class="feather-textarea error"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <!--v-if-->
        <svg
          aria-hidden="true"
          class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
          data-ref-id="error-icon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
          />
          <rect
            height="7"
            rx="1"
            width="2"
            x="11"
            y="7"
          />
          <rect
            height="2"
            rx="0.65"
            width="2"
            x="11"
            y="15"
          />
        </svg>
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <!--v-if-->
    <!--v-if-->
    <div
      aria-live="assertive"
      class="feather-input-error"
      data-ref-id="feather-form-element-error"
    >
      Error text
    </div>
    
    
  </div>
</div>
`;

exports[`FeatherTextarea.vue should render an textarea error and has a value 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container raised error feather-textarea-content error"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="true"
        class="feather-textarea error"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <!--v-if-->
        <svg
          aria-hidden="true"
          class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
          data-ref-id="error-icon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
          />
          <rect
            height="7"
            rx="1"
            width="2"
            x="11"
            y="7"
          />
          <rect
            height="2"
            rx="0.65"
            width="2"
            x="11"
            y="15"
          />
        </svg>
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <!--v-if-->
    <!--v-if-->
    <div
      aria-live="assertive"
      class="feather-input-error"
      data-ref-id="feather-form-element-error"
    >
      Error text
    </div>
    
    
  </div>
</div>
`;

exports[`FeatherTextarea.vue should render an textarea error and has focus 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container raised focused error feather-textarea-content error focused"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="true"
        class="feather-textarea error"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <!--v-if-->
        <svg
          aria-hidden="true"
          class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
          data-ref-id="error-icon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
          />
          <rect
            height="7"
            rx="1"
            width="2"
            x="11"
            y="7"
          />
          <rect
            height="2"
            rx="0.65"
            width="2"
            x="11"
            y="15"
          />
        </svg>
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <!--v-if-->
    <!--v-if-->
    <div
      aria-live="assertive"
      class="feather-input-error"
      data-ref-id="feather-form-element-error"
    >
      Error text
    </div>
    
    
  </div>
</div>
`;

exports[`FeatherTextarea.vue should render an textarea with a label 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container feather-textarea-content"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-textarea"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <!--v-if-->
        <!--v-if-->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <div
      class="feather-input-spacer"
    >
       
    </div>
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
</div>
`;

exports[`FeatherTextarea.vue should render an textarea with a label and hint text 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container feather-textarea-content"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-textarea"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <!--v-if-->
        <!--v-if-->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <!--v-if-->
    <div
      class="feather-input-hint"
      data-ref-id="feather-form-element-hint"
    >
      hint text
    </div>
    <!--v-if-->
    
    
  </div>
</div>
`;

exports[`FeatherTextarea.vue should render an textarea with a preset value 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container raised feather-textarea-content"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-textarea"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <!--v-if-->
        <!--v-if-->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <!--v-if-->
    <div
      class="feather-input-hint"
      data-ref-id="feather-form-element-hint"
    >
      hint text
    </div>
    <!--v-if-->
    
    
  </div>
</div>
`;

exports[`FeatherTextarea.vue should render an textarea with raised label when focused 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container raised focused feather-textarea-content focused"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-textarea"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <!--v-if-->
        <!--v-if-->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <div
      class="feather-input-spacer"
    >
       
    </div>
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
</div>
`;

exports[`FeatherTextarea.vue should render an textarea with raised label when focused and has a value 1`] = `
<div
  class="feather-textarea-container"
>
  <div
    class="feather-input-wrapper-container raised focused feather-textarea-content focused"
  >
    <div
      class="feather-input-border"
    >
      <div
        class="pre-border"
      />
      <div
        class="label-border"
        style="width: 0px;"
      >
        <label
          class="feather-input-label"
          data-ref-id="feather-form-element-label"
          for="feather-textarea-label"
        >
          label
        </label>
      </div>
      <div
        class="post-border"
      />
    </div>
    <div
      class="feather-input-wrapper"
    >
      <div
        class="prefix"
      >
        
        
      </div>
      
      <textarea
        aria-describedby="feather-textarea-description"
        aria-disabled="false"
        aria-invalid="false"
        class="feather-textarea"
        data-ref-id="feather-textarea-input"
        id="feather-textarea-label"
        name="feather-textarea-label"
      />
      
      <div
        class="post"
      >
        <!--v-if-->
        <!--v-if-->
        
        
      </div>
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-textarea-description"
  >
    <div
      class="feather-input-spacer"
    >
       
    </div>
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
</div>
`;
